[migration 9] AppVeyor -> GitHub Actions, and CI that finally runs the tests
.appveyor.yml built on `image: Previous Ubuntu1604` with `stack: jdk 8`, which cannot
build a tree whose server module declares a Java 21 toolchain. It also never ran a
test: build.sh builds with -PnoTest, the config said `test: off`, and the next line
ran jacocoTestReport over a build that had executed nothing - so every coverage upload
was an empty report, pushed through the codecov bash uploader that has since been
sunset. The 534 server tests had no CI, and neither did the CLI's, which nothing in the
repository ran at all: they are 135 tests, and green.

.github/workflows/build.yml has six jobs - lint (checkstyle + pmd, both modules),
test-h2 (server suite + CLI suite + coverage), test-pg (the same suite against a
postgres:16 service container), build (the five artifacts, then the docker image built
and smoke-tested), bundles (the two JRE-bundled archives, release branches and manual
runs only) and publish (dist/ to S3, image to Docker Hub on release/*). The first five
need no secrets; publish is skipped unless AWS_PUBLISH_ROLE_ARN is set.

Three things a hosted runner needs that a container did not:

- The JDKs setup-java installs are invisible to Gradle: auto-download is off by design
  and /opt/hostedtoolcache is not a location it scans. So the toolchains are named
  through org.gradle.java.installations.fromEnv, written into $HOME/.gradle - not the
  repository's gradle.properties, because buildJar and buildCli are nested GradleBuild
  invocations that never read the root project's properties. In a composite action,
  .github/actions/setup-jdks, so there is one copy of that reasoning.
- -PexcludeNetworkTests (server/catgenome/build.gradle) drops the two tests that reach
  the public internet - GffManagerTest.testLoadGenesTranscript and
  PdbDataManagerTest.testParse - by name, and nothing else. Both are long-recorded
  baseline failures with a known cause; the local `make test` stil